--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Resume by React</title>
+	<link rel="icon" href="https://www.dark-wing.com/img/favicon.png">
 </head>
 <body  onselectstart="return false">
 	<div id="root"></div>
@@ -11,5 +12,8 @@
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
-<script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="bundle.js"></script>
+	<!--  -->
+	<div style="display:none;"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=55rwupqghxb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=0" async="async"></script></div>
+</body>
 </html>
